Changelog
=========


1.0a22 (unreleased)
-------------------

- Issue #1184 Abgeschnittene Icons
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1184
  More space for icons
  [fsprenger]


1.0a21 (2011-09-29)
-------------------

- Make sure links are not underlined in tables #1640
  [fsprenger]

- removed translation-changes from issue #1606
  [eschmutz]

- #1154 Umstellung OpenGever in GEVER
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1154
  Updated po files replaced OpenGever with Gever
  [ttschanz]

- Added an opengever-specific main_template in the izug_opengever skin layer,
  removed og-specific code from main_template in izug_basetheme_templates
  [fsprenger]

- Issue #1606 Arbeitsraum - Fehlendes Kalenderwidget beim Termin
  https://extranet.4teamwork.ch/support/zug/maintlog/1606
  moved web_document_file_wdiget.pt to izug.webcontent as file_field_widget.pt
  [eschmutz]

1.0a20 (2011-09-20)
-------------------

- Issue #1602 Wartung: Integrationstypen koennen keine internen Links setzen
  https://extranet.4teamwork.ch/support/zug/maintlog/1602
  Fix "Home" link bugs in referencebrowser_popup.pt

- Issue #1172 Feedback aus Pilotphase: Website durchsuchen umbenennen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1172
  Changed translation
  [fsprenger]

1.0a19
------

- Issue #1606 Arbeitsraum - Fehlendes Kalenderwidget beim Termin
  https://extranet.4teamwork.ch/support/zug/maintlog/1606
  added recursive skinsregistry for izug_izug in skins.zcml
  [eschmutz]


1.0a18
------

- Issue #1606 Arbeitsraum - Fehlendes Kalenderwidget beim Termin
  https://extranet.4teamwork.ch/support/zug/maintlog/1606
  show skins/izug_izug/jscalendar/README.txt
  [eschmutz]


1.0a17
------

- Issue #1606 Arbeitsraum - Fehlendes Kalenderwidget beim Termin
  https://extranet.4teamwork.ch/support/zug/maintlog/1606
  override template calendar_macros.pt
  [eschmutz]
